Fix 1 Add toAbsolutePath() to filePaths Add test Differ.generate whithout format Add test for json Formatter Add static parse(text, type) to Parser class